<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/container"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context=".MainActivity"

    android:paddingTop="9dp"
    android:background="#ff1e1e1e"
    android:paddingLeft="5dp"
    android:paddingRight="5dp">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="280dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="220dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="230dp"
                android:layout_weight="1">

                <EditText android:id="@+id/edit_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_message"
                    android:inputType="number"
                    android:textSize="13sp"
                    android:textColor="#ffffaf00" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/selected"
                    android:textSize="16sp"
                    android:textColor="#ffff1800"
                    android:textIsSelectable="false"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/selSensor"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:textColor="#b5ff3209"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/net_status"
                    android:textSize="16sp"
                    android:textColor="#ff1cff02"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/net_status"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:textColor="#ff00ff9e"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/job_status"
                    android:textSize="16sp"
                    android:textColor="#ffffd600"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/jobStatus"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:textColor="#ff00c8ff"
                    android:paddingBottom="10dp" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="230dp"
                android:layout_weight="1">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sensorList"
                    android:textColor="#ffff0100"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ListView
                    android:layout_width="fill_parent"
                    android:layout_height="200dp"
                    android:textColor="#ffff1800"
                    android:id="@+id/sensor_list" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/start_btt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/startbtt"
                android:onClick="start"
                android:layout_weight="1" />

            <Button
                android:id="@+id/stop_btt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stopbtt"
                android:onClick="stop"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
